# rss-feed-manager

./: .gitignore  CMakeLists.txt  README.md  README.txt  client.cpp  server.cpp
include/: dialogWindow.h  executor.h  mainWindow.h  myserver.h  requestHandler.h  rssFeed.h  rssFeedManager.h
src/: dialogWindow.cpp  dialogwindow.ui  executor.cpp  mainWindow.cpp  mainwindow.ui  myserver.cpp  requestHandler.cpp  rssFeed.cpp  rssFeedManager.cpp
